# souk-dz-agent

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
.github/workflows/: daily-report.yml
scripts/: organiser_produits.py
souk_dz/: cli.py  config.py  models.py  orchestrator.py
souk_dz/ai/: normalizer.py
souk_dz/analysis/: database.py  opportunity.py
souk_dz/reporting/: email_sender.py  excel.py
souk_dz/reporting/templates/: email.html.j2
souk_dz/scrapers/: __init__.py  base.py  facebook.py  ouedkniss.py  prixalgerie.py  soukalys.py  tiktok.py  zerbote.py
tests/: test_smoke.py
